# SDC

./: .dvcignore  .gitignore  .gitmodules  README.md  config.py  data.dvc  docker-compose.yml  environment.yml  how-do-i-use-this-project.md  main.py  notes.md  prerequisites-and-setup.md  pyproject.toml  requirements-simpan.txt  requirements.txt  setup.sh  utils.py
.dvc/: config
CARLA_0.9.10/PythonAPI/sdc/: main.py  requirements.txt
DATA/: config.json
DATA_SCRIPTS/: car_pose.py  run.py  utils.py
backup/config/: town01_default.yaml
backup/config/agroverse/: vehicle0.yaml
backup/config/vehicles/: vehicle0.yaml
data/config/pedestrians/: pedestrian0.yaml  pedestrian1.yaml
data/config/vehicles/: vehicle0.yaml  vehicle1.yaml
docs/: README (1).md  README.md  SUMMARY.md  how-do-i-use-this-project.md  notes.md  prerequisites-and-setup.md
src/: __init__.py  client.py  data_synthesizer.py  motion_planning.py
src/agroverse/: base.py  constants.py  forecasting.py  utils.py
src/base/: camera_rgb.py  mixin.py  sensor.py  vehicle.py  walker.py
src/model/: enum.py  pydantic_model.py  pydantic_world.py  validators.py
src/utils/: logger.py  utils.py
src/waymo/: forecasting.py
test/: utils.py
test/base/: test_sensor.py  test_vehicle.py  test_walker.py
workers/av2_datasets/: Dockerfile  __init__.py  app.py  config.py  docker-compose.yml  requirements.txt
workers/waymo/: Dockerfile  __init__.py  config.py
workers/waymo_datasets/: Dockerfile  app.py  config.py  constants.py  docker-compose.yml  environment.yml  requirements.txt  test_tasks.py
(+17 files in other folders)
